css/style.css
html {
	/* height: 100%; */
}

body {
	background: url("/images/bg.png");
	/* height: 100%; */
	color: #000;
	font-family: "Gill Sans","Gill Sans MT", sans-serif;
	font-size: 12pt;
}

a {
	text-decoration: none;
	color: #000;
}

#wrapper {
	/* height: 100%; */
	min-width: 1280px;
}

#nav {
	width: 200px;
	float: left;
	display: inline;
	padding: 50px;
	position: fixed;
	/* height: 100%; */
	z-index: 0;
}

#logo {
	font-size: 20pt;
}

#nav ul {
	list-style: none;
	margin-top: 25px;
	text-transform: uppercase;
}

#nav li ul {
	margin-top: 2px;
	margin-bottom: 2px;
	margin-left: 20px;
	display: none;
}

#nav li ul a {
	color: #9e9e9e;
}

#nav .info {
	color: #9e9e9e;
	margin-top: 100px;
	font-size: 12pt;
	position: absolute;
	bottom: 150px;
}

#copyright {
	z-index: -1;
	position: fixed;
	color: #9e9e9e;
	bottom: 50px;
	right: 50px;
}

#contentwrapper {
	width: 700px;
	/* min-height: 100%; */
	position: relative;
	margin: 0 auto;
	background-color: #fafafa;
	border: 1px solid rgba(255, 255, 255, 0.6);
	z-index: 10;
}

#content {
	padding: 50px;
	padding-top: 35px;
	font-size: 13pt;
	font-weight: lighter;
}

#content h1 {
	font-size: 24pt;
	font-weight: lighter;
	margin-bottom: 20px;
}

#content h1 a {
	color: #5e5e5e;
}

#content h2 {
	font-size: 18pt;
}

#content ul {
	list-style: inside;
}

#content img {
	display: block;
	margin: 0 auto;
	max-width: 600px;
	box-shadow: 0 0 8px #666;
	border-radius: 5px;
	border: none;
}

#content p {
	margin: 20px 0;
	font-weight: lighter;
}

#content p a {
	text-decoration: underline;
}

#content pre {
	font-family: "Courier New", Courier, monospace;
	font-size: 10pt;
	background: #d8d8d8;
	box-shadow: 0 0 8px #aaa;
	border-radius: 5px;
	padding: 15px 20px;
	overflow: auto;
}

#content p code {
	font-family: "Courier New", Courier, monospace;
	font-size: 10pt;
	background: #d8d8d8;
	border-radius: 2px;
	padding: 2px;
}

#content blockquote p {
	font-size: 11pt;
	background: #d8d8d8;
	border-radius: 5px;
	padding: 10px;
	box-shadow: 0 0 8px #aaa;
}

#content div + h1 {
	margin-top: 25px;
}

#related {
	margin-top: 80px;
}

.date {
	color: #8e8e8e;
	float: right;
	margin-top: 15px;
}

.archive {
	list-style: none !important;
	margin-top: 10px;
}

.archive li {
	float: left;
	margin-bottom: 5px;
	width: 100%;
}

.archive a {
	min-width: 200px;
	float: left;
}

.archive span {
	color: #8e8e8e;
	float: right;
}

.posts {
	list-style: none !important;
	margin-top: 5px;
}

.posts li {
	margin-bottom: 5px;
}

.posts span {
	color: #8e8e8e;
}

.posts a {
	color: #5e5e5e;
	text-decoration: none !important;
}

#resume {
	font-weight: lighter;
}

#resume h1 {
	margin-bottom: 0;
	line-height: 1em;
	margin-top: 10px;
}

#resume h2 {
	margin-bottom: 30px;
	color: #8e8e8e;
	font-size: 12pt;
}

#resume dt {
	font-size: 18pt;
	color: #8e8e8e;
	margin-bottom: 10px;
}

#resume dt span {
	color: #5e5e5e;
}

#resume dd {
	margin-bottom: 20px;
}

#resume a {
	color: #444;
	font-weight: normal;
}

.others {
	list-style: none !important;
}

.lost {
	float: left;
	display: inline;
	width: 100%;
	text-align: center;
	margin-top: 300px;
	font-size: 24px;
}

.archive {
	list-style: none !important;
	margin-top: 10px;
}

.archive li {
	float: left;
	margin-bottom: 5px;
	width: 100%;
}

.archive a {
	min-width: 200px;
	float: left;
}

.archive span {
	float: right;
}

#social {
	margin-left: 15%;
}

#social ul {
    position : relative;
    list-style-type : none;
}

#social ul li {
    float : left;
    border : 0px solid rgba(0,0,0,.1);
    padding : 6px;
    margin : 2px;
}

#disqus_thread {
	margin-top: 100px;
}

.gist pre{
    font-size: 13px !important;
    line-height: 140% !important;
}

div.gist-meta {
    padding: 5px !important;
    font-size: 11px !important;
    line-height: 11px;
}

